# Rust-Encryption-Starter-Kit-0

./: Cargo.toml  README.md  readthis.html
Ai/1/: Cargo.toml
Ai/1/docs/: readthis.html  save.txt
Ai/1/src/: main.rs
Ai/2/: Cargo.toml
Ai/2/docs/: read.txt  readthis.html
Ai/2/src/: main.rs
Ai/otp/: Cargo.toml
CHA-main/: README.md
PASS/src/: main.rs
aes1/: Cargo.toml  README.md  key.key
aes1/src/: main.rs
convert/: Cargo.toml
convert/src/: main.rs
ezcrypt/: Cargo.toml  readme.html
ezcrypt/src/: main.rs
ezcrypt1/: Cargo.toml  read.html  read1.html  read2.html
ezcrypt1/src/: main.rs
keykey/: Cargo.toml  readme.html
keykey/src/: main.rs
kit1/: README.md
kit1/a1/: Cargo.toml  read.txt
kit1/a1/src/: main.rs
kit1/a2/: Cargo.toml  read.txt
kit1/a4/: Cargo.toml  README.md
kit1/b1/: Cargo.toml  README.md
kit1/c1/: Cargo.toml  README.md
kit1/k1/: Cargo.toml
kit1/p1/: Cargo.toml
kit1/p2/: Cargo.toml
kit1/t1/: Cargo.toml  demo-data.html  readme.md
password/: readme.md
password/PASS2/: Cargo.toml  readthis.html
secure/: README.md
secure-main/: README.md
secure-main/secure-version-002/: Cargo.toml  README.md
secure-main/secure-version-003/: Cargo.toml  README.md
secure-main/secure-version-004/: Cargo.toml  README.md  readthis.html
secure-main/secure-version-005/: Cargo.toml  readthis.html
std-otp/: Cargo.toml  README.md
std-otp/src/: main.rs
threefish-512/: Cargo.toml  README.md
threefish-512/src/: main.rs
toy/: Cargo.toml
toy/src/: main.rs
toy1/src/: main.rs
yyy-AES-256-GCM/: readme.md
(+13 files in other folders)
